# llm-eval-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml  eval.yml
examples/extraction/: task.yaml
src/eval_agent/: agent.py  extraction_judge.py  generator.py  lambda_handler.py  reporter.py  runner.py  schemas.py  transcriber.py  transcript_judge.py
terraform/: api_gateway.tf  cloudwatch.tf  ecr.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  sqs.tf  ssm.tf  variables.tf  versions.tf
tests/: conftest.py  test_regression.py  test_reporter.py  test_schemas.py  test_transcript_judge.py
tests/fixtures/: regression_report.json
